✨ 契約のキャンセルAPIの実装
