# docs/swagger.json
@@ -92,6 +92,22 @@
                 }
             }
         },
+        "/me/contracts/{contractId}": {
+            "delete": {
+                "description": "cancel contracts",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "me"
+                ],
+                "summary": "Cancel Contracts",
+                "responses": {}
+            }
+        },
         "/me/hosts": {
             "get": {
                 "description": "read hosts",
