# routing.go
@@ -48,6 +48,7 @@ func (r *Routing) setRouting() {
 		v1.POST("/me/stripe-connect", func(c *gin.Context) { r.mc.CreateStripeConnect(c) })
 		v1.GET("/me/hosts", func(c *gin.Context) { r.mc.ReadHosts(c) })
 		v1.GET("/me/contracts", func(c *gin.Context) { r.mc.ReadContracts(c) })
+		v1.DELETE("/me/contracts/:contractId", func(c *gin.Context) { r.mc.CancelContracts(c) })
 
 		v1.GET("/users", func(c *gin.Context) { r.uc.Read(c) })
 		v1.POST("/users", func(c *gin.Context) { r.uc.Create(c) })
